[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/gameplay/gameplay_shake_en.png" type="Texture" id=1]
[ext_resource path="res://assets/bg_symbol_small.png" type="Texture" id=2]
[ext_resource path="res://assets/gameplay/gameplay_model_1.png" type="Texture" id=3]
[ext_resource path="res://assets/bg_main.jpg" type="Texture" id=4]
[ext_resource path="res://scenes/Gameplay1.gd" type="Script" id=5]
[ext_resource path="res://scenes/Shacker.gd" type="Script" id=6]
[ext_resource path="res://assets/gameplay/gameplay_text_bg.png" type="Texture" id=7]
[ext_resource path="res://assets/gameplay/gameplay_text_line.png" type="Texture" id=8]
[ext_resource path="res://assets/gameplay/gameplay_btn_reset_en.png" type="Texture" id=9]
[ext_resource path="res://assets/font/OPPOSans H 400.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/gameplay/gameplay_model_4.png" type="Texture" id=11]
[ext_resource path="res://assets/white.png" type="Texture" id=12]
[ext_resource path="res://assets/black.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 10 )

[node name="Gameplay1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="tx_bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="tx_bgs" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.5
margin_top = -180.0
margin_right = 264.5
margin_bottom = 349.0
texture = ExtResource( 2 )

[node name="Shacker" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 52.0
margin_bottom = 52.0
script = ExtResource( 6 )

[node name="tx_base" type="TextureRect" parent="Shacker"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -420.0
margin_right = 150.0
margin_bottom = 420.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="tx_stick" type="TextureRect" parent="Shacker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -387.0
margin_top = -1.00006
margin_right = 199.0
margin_bottom = 68.9999
rect_rotation = 90.0
rect_pivot_offset = Vector2( 400, 35 )
texture = ExtResource( 11 )
stretch_mode = 4

[node name="tx_model" type="TextureRect" parent="Shacker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -420.0
margin_right = 150.0
margin_bottom = 420.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Tween" type="Tween" parent="Shacker"]

[node name="tx_text" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 88.0
margin_bottom = 170.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Popup" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Card" type="Control" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 200 )

[node name="tx_promp_bg" type="TextureRect" parent="Popup/Card"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.0
margin_top = -554.0
margin_right = 359.0
margin_bottom = 554.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="lb_num" type="Label" parent="Popup/Card"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -455.5
margin_right = 120.5
margin_bottom = -312.5
custom_colors/font_color = Color( 0.768627, 0.223529, 0.196078, 1 )
custom_fonts/font = SubResource( 1 )
text = "13"
align = 1
valign = 1
autowrap = true

[node name="tx_promp_line" type="TextureRect" parent="Popup/Card"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.0
margin_top = -300.0
margin_right = 299.0
margin_bottom = -260.0
texture = ExtResource( 8 )

[node name="lb_desc" type="Label" parent="Popup/Card"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -283.5
margin_right = 279.0
margin_bottom = 331.5
custom_colors/font_color = Color( 0.486275, 0.0470588, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "Lose friends if you start looking for flaws in them."
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="btn_reset" type="Button" parent="Popup/Card"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = 371.0
margin_right = 249.0
margin_bottom = 479.0
icon = ExtResource( 9 )
flat = true

[node name="Tween" type="Tween" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -284.0
margin_top = -84.0
margin_right = 284.0
margin_bottom = -75.0
value = 30.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 12 )
tint_progress = Color( 0.482353, 0.482353, 0.482353, 1 )
nine_patch_stretch = true
